# business_diagnostic

./: README.md  diagonstic_report.md  nicheBrians_diagnostic_report.md  pyproject.toml
src/business_diagnostic/: app.py  crew.py  main.py
src/business_diagnostic/config/: agents.yaml  tasks.yaml
src/business_diagnostic/generated_files/: Caterpillar_diagnostic_report.md  nicheBrians_diagnostic_report.md
src/business_diagnostic/templates/: input.html  view.html
