[project]
name = "business_diagnostic"
version = "0.1.0"
description = "business_diagnostic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "flask>=3.1.0",
    "markdown-pdf>=1.3.2",
    "markdown2>=2.5.2",
]

[project.scripts]
business_diagnostic = "business_diagnostic.main:run"
run_crew = "business_diagnostic.app:main"
train = "business_diagnostic.main:train"
replay = "business_diagnostic.main:replay"
test = "business_diagnostic.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
